TCC/TCC/force-app/main/default/objects/Despesas__c/Despesas__c.object-meta.xml
<CustomObject>
    <label>Despesa</label>
    <nameField>
        <label>Despesa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Despesas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>