TCC/TCC/force-app/main/default/objects/Despesas__c/fields/DataDespesa__c.field-meta.xml
<CustomField>
    <fullName>DataDespesa__c</fullName>
    <label>Data da Despesa</label>
    <required>true</required>
    <type>Date</type>
</CustomField>