TCC/TCC/force-app/main/default/objects/Despesas__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Destinação</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>