TCC/TCC/force-app/main/default/objects/Despesas__c/fields/DespesasPlanilhaOrcamentaria__c.field-meta.xml
<CustomField>
    <fullName>DespesasPlanilhaOrcamentaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planilha Orçamentária</label>
    <referenceTo>PlanilhaOrcamentaria__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <type>Lookup</type>
</CustomField>