TCC/TCC/force-app/main/default/objects/Despesas__c/fields/FluxoCaixa__c.field-meta.xml
<CustomField>
    <fullName>FluxoCaixa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fluxo de Caixa</label>
    <referenceTo>FluxoCaixa__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <type>Lookup</type>
</CustomField>