TCC/TCC/force-app/main/default/objects/Despesas__c/fields/MesDespesa__c.field-meta.xml
<CustomField>
    <fullName>MesDespesa__c</fullName>
    <formula>IF(Mes__c = 1, &apos;Janeiro&apos;, 
 IF(Mes__c = 2, &apos;Fevereiro&apos;,  
IF(Mes__c = 3, &apos;Março&apos;,  
IF(Mes__c = 4, &apos;Abril&apos;, 
 IF(Mes__c = 5, &apos;Maio&apos;,
 IF(Mes__c = 6, &apos;Junho&apos;, 
 IF(Mes__c = 7, &apos;Julho&apos;, 
 IF(Mes__c = 8, &apos;Agosto&apos;, 
 IF(Mes__c = 9, &apos;Setembro&apos;, 
 IF(Mes__c = 10, &apos;Outubro&apos;, 
 IF(Mes__c = 11, &apos;Novembro&apos;, 
 IF(Mes__c = 12, &apos;Dezembro&apos;, &apos;erro&apos;) ) ) ) )) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês da Despesa</label>
    <type>Text</type>
</CustomField>