TCC/TCC/force-app/main/default/objects/Despesas__c/fields/ValorDespesa__c.field-meta.xml
<CustomField>
    <fullName>ValorDespesa__c</fullName>
    <label>Valor da Despesa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>