TCC/TCC/force-app/main/default/objects/Despesas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ValorDespesa__c</columns>
    <columns>DataDespesa__c</columns>
    <columns>DespesasPlanilhaOrcamentaria__c</columns>
    <columns>DespesasProjeto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>